--- a/index.html
+++ b/index.html
@@ -49,32 +49,32 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-attention.png" alt="иллюстрация к карточке два вида внимания">
+            <img class="cards__image" src="./images/cards-attention.png" alt="иллюстрация к карточке два вида внимания">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-recall.png" alt="иллюстрация к карточке recall">
+            <img class="cards__image" src="./images/cards-recall.png" alt="иллюстрация к карточке recall">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное - это позволит соединить разрозненные порции памяти.
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-interliving.png" alt="иллюстрация к карточке интерливинг">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="иллюстрация к карточке интерливинг">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-question.png" alt="иллюстрация к карточке вопросы">
+            <img class="cards__image" src="./images/cards-question.png" alt="иллюстрация к карточке вопросы">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.
             </p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="/images/cards-competence.png"
+            <img class="cards__image" src="./images/cards-competence.png"
               alt="иллюстрация к карточке иллюзия компетентности">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
@@ -169,7 +169,7 @@
           <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="/images/khan-book.jpg" alt="обложка книги Салмана Хана">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги Салмана Хана">
             <a class="khan__buy-link link" href="#">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -232,13 +232,13 @@
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <nav class="resources__logo-zone">
           <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
-              src="/images/logo/resources-arzamas.svg" alt="логотип арзамас"></a>
+              src="./images/logo/resources-arzamas.svg" alt="логотип арзамас"></a>
           <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
-              src="/images/logo/resources-n1.svg" alt="логотип н1"></a>
+              src="./images/logo/resources-n1.svg" alt="логотип н1"></a>
           <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
-              src="/images/logo/resources-strelka.svg " alt="логотип стрелка"></a>
+              src="./images/logo/resources-strelka.svg " alt="логотип стрелка"></a>
           <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
-              src="/images/logo/resources-polka.svg" alt="логотип полка"></a>
+              src="./images/logo/resources-polka.svg" alt="логотип полка"></a>
         </nav>
       </section>
     </main>
