--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="root">
     <header class="header">
-      <div class="logo logo_place_header"></div>
+      <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="логотип Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
@@ -110,6 +110,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link link" href="#" target="_blank">Подробнее &rarr;</a>
+        <img class="feynman__illustration" src="./images/feynman.png" alt="Ричард Фейнман">
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -225,7 +226,7 @@
             </p>
           </li>
         </ul>
-        <div class="kaufman__triangle rotation"></div>
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="синий треугольник">
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
@@ -245,7 +246,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_place_footer"></div>
+          <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="логотип Яндекс Практикум">
           <p class="footer__author">&#xa9; Глеб</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -286,4 +287,5 @@
     </footer>
   </div>
 </body>
+
 </html>
