--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="header__square-pic rotation"></div>
     </header>
     <main>
-      <section class="description">
+      <section aria-label="description" class="description">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
@@ -44,7 +44,7 @@
           </div>
         </article>
       </section>
-      <section class="techniques">
+      <section aria-label="techniques" class="techniques">
         <h2 class="section-title">Техники обучения</h2>
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
@@ -83,9 +83,9 @@
           </li>
         </ul>
       </section>
-      <section class="video">
-        <div class="section-title"> Видео нa TED </div>
-        <div class="section-subtitle"> Для тех, кто любит прокрастинировать</div>
+      <section aria-label="video" class="video">
+        <h2 class="section-title"> Видео нa TED </h2v>
+        <p class="section-subtitle"> Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
           <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
@@ -106,13 +106,13 @@
           </div>
         </article>
       </section>
-      <section class="feynman">
+      <section aria-label="feynman" class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a class="feynman__link link" href="#" target="_blank">Подробнее &rarr;</a>
         <img class="feynman__illustration" src="./images/feynman.png" alt="Ричард Фейнман">
       </section>
-      <section class="digits">
+      <section aria-label="digits" class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
         <ul class="table">
@@ -160,14 +160,14 @@
           </li>
         </ul>
       </section>
-      <section class="khan">
+      <section aria-label="khan" class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Хан</h2>
-          <h3 class="khan__title">Весь мир — школа</h3>
-          <p class="khan__quote">Страсть и новаторство Салмана Хана меняют процесс обучения миллионов студентов по всему
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <blockquote class="khan__quote">Страсть и новаторство Салмана Хана меняют процесс обучения миллионов студентов по всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
-            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <h3 class="khan__quote-author">Джордж Лукас</h3>
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+          <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги Салмана Хана">
@@ -175,7 +175,7 @@
           </div>
         </div>
       </section>
-      <section class="kaufman">
+      <section aria-label="kaufman" class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
@@ -226,21 +226,21 @@
             </p>
           </li>
         </ul>
-        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle rotation" alt="синий треугольник">
+        <div class="kaufman__triangle rotation"></div>
       </section>
-      <section class="resources">
+      <section aria-label="resources" class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-        <nav class="resources__logo-zone">
-          <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a class="resources__link link" href="#" target="_blank"><img class="resources__logo"
               src="./images/logo/resources-arzamas.svg" alt="логотип арзамас"></a>
-          <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
+          <a class="resources__link link" href="#" target="_blank"><img class="resources__logo"
               src="./images/logo/resources-n1.svg" alt="логотип н1"></a>
-          <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
+          <a class="resources__link link" href="#" target="_blank"><img class="resources__logo"
               src="./images/logo/resources-strelka.svg " alt="логотип стрелка"></a>
-          <a class="resources__link" href="#" target="_blank"><img class="resources__logo"
+          <a class="resources__link link" href="#" target="_blank"><img class="resources__logo"
               src="./images/logo/resources-polka.svg" alt="логотип полка"></a>
-        </nav>
+          </div>
       </section>
     </main>
     <footer class="footer">
